--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,20 +1,20 @@
-@import './reset';
-@import './themes/light';
-@import './themes/dark';
-@import './variables/global';
+@import "./reset";
+@import "./themes/light";
+@import "./themes/dark";
+@import "./variables/global";
 
 .app {
-    min-height: 100vh;
-    font: var(--font-m);
-    color: var(--primary-color);
-    background: var(--bg-color);
+  min-height: 100vh;
+  font: var(--font-m);
+  color: var(--primary-color);
+  background: var(--bg-color);
 }
 
 .content-page {
-    display: flex;
+  display: flex;
 }
 
 .page-wrapper {
-    flex-grow: 1;
-    padding: 20px;
+  flex-grow: 1;
+  padding: 20px;
 }
