--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,4 +1,5 @@
 .button {
+  padding: 10px 15px;
   cursor: pointer;
   color: var(--primary-color);
 }
@@ -12,7 +13,49 @@
 }
 
 .outline {
-  padding: 10px 15px;
   border: 1px solid var(--primary-color);
   background: none;
+}
+
+.background {
+  border: none;
+  color: var(--primary-color);
+  background: var(--bg-color);
+}
+
+.backgroundInverted {
+  border: none;
+  color: var(--inverted-primary-color);
+  background: var(--inverted-bg-color);
+}
+
+.square {
+  padding: 0;
+
+  &.size_m {
+    width: var(--font-line-m);
+    height: var(--font-line-m);
+  }
+
+  &.size_l {
+    width: var(--font-line-l);
+    height: var(--font-line-l);
+  }
+
+  &.size_xl {
+    width: var(--font-line-xl);
+    height: var(--font-line-xl);
+  }
+}
+
+.size_m {
+  font: var(--font-m);
+}
+
+.size_l {
+  font: var(--font-l);
+}
+
+.size_xl {
+  font: var(--font-xl);
 }
