--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,5 +1,5 @@
 :root {
-  // Шрифт
+  // Fonts
   --font-family-main: consolas, "Times New Roman", sans-serif;
   --font-size-m: 16px;
   --font-line-m: 24px;
@@ -11,8 +11,14 @@
   --font-line-xl: 40px;
   --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
 
-  // Размеры
+  // Sizes
   --navbar-height: 50px;
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
+
+  // z - indexes
+  --modal-z-index: 10;
+
+  //  Colors
+  --overlay-bg: rgba(0 0 0 / 60%);
 }
