--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -4,12 +4,17 @@
   color: var(--primary-color);
 }
 
-.clear {
+.clear,
+.clearInverted {
   margin: 0;
   padding: 0;
   border: none;
   outline: none;
   background: none;
+}
+
+.clearInverted {
+  color: var(--inverted-primary-color);
 }
 
 .outline {
