--- a/src/shared/ui/Modal/index.module.scss
+++ b/src/shared/ui/Modal/index.module.scss
@@ -24,6 +24,7 @@
   transition: 300ms transform;
   transform: scale(0.5);
   border-radius: 12px;
+  color: var(--primary-color);
   background: var(--bg-color);
 }
 
